# pclu

./: .gitignore  AUTHORS  CHANGES  COPYING  INSTALL  Makefile  Makefile.am  README  README.dwc  README.sjg  clu.order  cmp  configure  configure.ac  configure.in  howto.install  include
cludent/: Makefile.linux  _buffered_read.clu  _calc_hpos.c  _calc_hpos.spc  _io_buf.clu  buf.clu  case.clu  foo.clu  foo.clu.orig  ienv.clu  ind.equ  spiffy.clu  start_up.clu
cmpclu/: Makefile  _bin_id.spc  _restore_state.spc  _save_state.spc  basic.junk  basic.types  bin.equ  build.clu  cconst.clu  cdchan.clu  cdefn1.clu  cdefn2.clu  ce.clu  cenv.clu  cexpr1.clu  cexpr2.clu  cmp.xfile  cmpvar.clu  codgen.equ  coper.clu  cspecs.clu  cstmt1.clu  cstmt2.clu  dtchan.clu  du.clu  eval1.clu  eval2.clu  gconst.clu  gdbg.clu  gdefn.clu  gen.equ  genv.clu  gexpr.clu  giter.clu  gopt1.clu  gparm.clu  gstmt.clu  gtbl.clu  gtypes.clu  gutil.clu  (+25 more)
code/: Makefile  Makefile.am  gc_mark.h  gc_tiny_fl.h  update
code/cmp/: Makefile.am  Makefile.linux  basic.types  build.c  ccdbg.cmd  ccdbg.cmd.linux  cconst.c  ccopt.cmd  ccopt.cmd.linux  cdchan.c  cdefn1.c  cdefn2.c  ce.c  cenv.c  cexpr1.c  cexpr2.c  cmpvar.c  coper.c  cspecs.c  cstmt1.c  cstmt2.c  dtchan.c  du.c  eval1.c  eval2.c  gconst.c  gdbg.c  gdefn.c  genv.c  gexpr.c  giter.c  gopt1.c  gparm.c  gstmt.c  gtbl.c  gtypes.c  gutil.c  gvars.c  idn.c  init.c  (+18 more)
code/cmpasm/: Makefile.linux  _bin_id.c  _restore_state.c  _save_state.c  version.c
code/gc-7.2/: Makefile  bdw-gc.pc  config.status  libtool  malloc.c
code/include/: acconfig.h.in  config.h  gc.h  gc_config_macros.h  gc_hdrs.h  gc_locks.h  gc_mark.h  gc_runtime.h  gc_tiny_fl.h  gc_version.h  pclu_err.h  pclu_sys.h
code/libasm/Opt/: Makefile  Makefile.am  _all_dir_entries_.c  _byteptr.c  _byteptr8.c  _change_mode.c  _change_owner.c  _change_signal.c  _cluref_size.c  _dtable_size.c  _exit.c  _file_access.c  _file_exists.c  _file_facts.c  _file_owner.c  _free_space.c  _get_active_heap.c  _get_gid.c  _get_max_heap.c  _get_min_gc.c  _get_pname.c  _get_priority.c  _get_runtime.c  _get_uid.c  _get_version.c  _get_xjname.c  _groups.c  _heap_size.c  _host_address.c  _host_id.c  _host_name.c  _ioctl.c  _job.c  _lstat.c  _micro_time.c  _nice.c  _obj.c  _page_size.c  _pause.c  _read_link.c  (+37 more)
code/libclu/Opt/: Makefile  Makefile.am  _all_file_names_.c  _int_range.c  _job_stuff.c  _longsub.c  _qindexc.c  _resolve.c  _signal_type.c  _system_root.c  _time_format.c  _unquote.c  all_file_names.c  array_replace.c  bigint.c  cos.c  delete_expunge.c  dparse.c  gc_copy.c  gc_dump.c  gc_dump.clu  gc_read.c  gcd_tab.c  heap.c  hex.c  host_address.c  inet_address.c  isqrt.c  istream.c  lex_scan.c  maybe.c  octal.c  open_append.c  open_read.c  open_write.c  os.c  parse_line.c  pstream.c  quick_sort.c  quicksort.c  (+11 more)
code/sysasm/Opt/: Makefile  Makefile.am  _adv.c  _anyize.c  _bytevec.c  _chan.c  _chan.c.last  _chan.c.orig  _cvt.c  _environ.c  _environs.c  _event.c  _get_pid.c  _gprof.c  _local_time.c  _round_real.c  _tagcell.c  _unparse_real.c  _vec.c  array.c  bool.c  char.c  connected_dir.c  delete_file.c  force.c  gprof.c  int.c  itertype.c  log.c  new_parm_util.c  new_selector.c  now.c  null.c  oneof.c  proctype.c  real.c  record.c  rename_file.c  sequence.c  string.c  (+8 more)
code/sysclu/: Debug  (+2 more)
code/sysclu/Opt/: Makefile  Makefile.am  _cause_bounds.c  _cause_illegal_char.c  _cause_overflow.c  _cause_wrong_tag.c  _cause_wrong_type.c  _cleanup_.c  _dir_ent_size.c  _erstr.c  _fixup_dir_part.c  _fixup_file_name.c  _get_termcap.c  _home_dir.c  _last_indexc.c  _skip_fill.c  _split_name_part.c  _termcap.c  _termcap_entry.c  _working_dir.c  date.c  e_form.c  f_form.c  file_name.c  file_name_fill.c  file_spec.c  g_form.c  set_working_dir.c  stream.c  user_name.c  working_dir.c
debug/: Makefile.linux  _signal.c  call_clu.c  debug.clu  debug.equ  debug.xfile  debug2.clu  debug_c.c  debug_c.spc  libinfo.c  libinfo.h  new_parm_util.c  new_selector.c  parse.clu  pclu.xref  selector.h  util.c
doc/: Makefile  mini-pclu.tex  pclu.tex
driver/: Makefile.am  Makefile.linux  bool.h  buffer.c  buffer.h  driver.c  driver.c.LAST  error.c  error.h  proto.h  wordlist.c  wordlist.h
elisp/: CLU-DOC  CLU-DOC-keys.el  README  README.admin  README.doc  clu-doc.el  clu.el  setup.el
emacs/: .emacs  CLU-DOC-keys.el  README  clu-doc.elc  clu.el  clu.elc
example/: Makefile
exe/: plink
lib/: Makefile  _adv.spc  _all_dir_entries_.spc  _byteptr.spc  _byteptr8.spc  _bytevec.spc  _chan.spc  _event.spc  _gc.spc  _gprof.spc  _host_address.spc  _job.spc  _obj.spc  _signal.spc  _tagcell.spc  _vec.spc  _wordvec.spc  etc.spc  gcd.equ  gcd_tab.spc  maybe.spc  mint.spc  random.spc  short.help  stream.spc  table.spc
sys/: Makefile
util/: Makefile.linux  liblst.clu
(+174 files in other folders)
