AC_INIT([pclu], [7.0])
AM_INIT_AUTOMAKE
AC_PROG_CC
AC_PROG_RANLIB
AC_CONFIG_FILES([Makefile code/Makefile code/sysasm/Makefile code/sysasm/Opt/Makefile code/libclu/Makefile  code/libclu/opt/Makefile code/libasm/Makefile code/libasm/opt/Makefile  code/sysclu/Makefile code/sysclu/Opt/Makefile code/cmp/Makefile ])
# New Makefile.am
AC_OUTPUT
