dnl Process this file with autoconf to produce a configure script.

AC_INIT(pclu, 1)
AC_CONFIG_HEADERS([code/include/acconfig.h])
AC_PROG_CC
AC_PROG_CPP

AC_CHECK_HEADERS(unistd.h string.h sys/stat.h sys/ioctl.h sys/socket.h stdlib.h malloc.h)

AC_COMPILE_IFELSE([AC_LANG_SOURCE([
#include <signal.h>
int main() {
    struct sigaction s;
    s.sa_mask.__val[0] = -1;
}
])],
    [AC_DEFINE(LINUX_STYLE_SIGACTION)],
    [])

AC_OUTPUT

[echo Configuring garbage collector...]
[cd code/gc; configure]
