bin_PROGRAMS = pclu
pclu_SOURCES =  build.c cconst.c cdchan.c cdefn1.c cdefn2.c ce.c cenv.c cexpr1.c cexpr2.c cmpvar.c coper.c cspecs.c cstmt1.c cstmt2.c dtchan.c du.c eval1.c eval2.c gconst.c gdbg.c genv.c giter.c gparm.c gdefn.c gstmt.c gtbl.c gexpr.c gopt1.c gtypes.c gutil.c gvars.c idn.c init.c lineedit.c pconst.c pdefn1.c pdefn2.c penv.c pexpr.c pjcl.c plist.c pstmt1.c pstmt2.c pttkn.c stable.c syntax.c tkntab.c top1.c top2.c vcmp.c xlib.c ../cmpasm/_bin_id.c ../cmpasm/_save_state.c ../cmpasm/_restore_state.c ../cmpasm/version.c
pclu_CFLAGS= -I../../code/include/
LDADD =  ../sysclu/Opt/libsysclu_opt.a ../libclu/Opt/libclu_opt.a ../libasm/Opt/libasm_opt.a ../libgc.a   ../sysasm/Opt/libsysasm_opt.a 
#../libpclu_opt.a ../libgc.a 