noinst_LIBRARIES = libsysasm_opt.a
libsysasm_opt_a_SOURCES = _adv.c _anyize.c _bytevec.c _chan.c _cvt.c _environ.c _environs.c _event.c _get_pid.c _gprof.c _local_time.c _round_real.c _tagcell.c _unparse_real.c _vec.c array.c bool.c char.c connected_dir.c delete_file.c force.c gprof.c int.c itertype.c log.c new_parm_util.c new_selector.c now.c null.c oneof.c proctype.c real.c record.c rename_file.c sequence.c string.c struct.c type.c type_of.c unimp.c unix_cmd.c util.c variant.c
libsysasm_opt_a_CFLAGS= -I../../include/ -DLINUX
#LDADD = ../../libclu/Opt/libclu_opt.a 