noinst_LIBRARIES = libsysclu_opt.a
libsysclu_opt_a_SOURCES = _cause_bounds.c _cause_illegal_char.c _cause_overflow.c _cause_wrong_tag.c _cause_wrong_type.c _cleanup_.c _dir_ent_size.c _erstr.c _fixup_dir_part.c _fixup_file_name.c _get_termcap.c _home_dir.c _last_indexc.c _skip_fill.c _split_name_part.c _termcap.c _termcap_entry.c _working_dir.c date.c e_form.c f_form.c file_name.c file_name_fill.c file_spec.c g_form.c set_working_dir.c stream.c user_name.c working_dir.c 

libsysclu_opt_a_CFLAGS= -I../../include/ -DLINUX
LDADD = ../../libclu/Opt/libclu_opt.a 